# misis2024s-23-04-mironov-a-e

./: CMakeLists.txt  README.md  codeforces.id  status.md
prj.codeforces/: 0004a.cpp  0136b.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0339b.cpp  0546a.cpp  0617a.cpp  0731a.cpp  0935b.cpp  0978b.cpp  1330a.cpp  1352a.cpp  1404a.cpp  1512c.cpp  1559a.cpp  1585a.cpp  1669d.cpp  1670b.cpp  1690d.cpp  1717b.cpp  1721b.cpp  1734b.cpp  1744c.cpp  1850a.cpp  1853a.cpp  1872a.cpp  1873b.cpp  1873d.cpp  1920a.cpp  1921a.cpp  1921b.cpp  1921c.cpp  1922a.cpp  1926b.cpp  1927c.cpp  1928a.cpp  1929b.cpp  1931a.cpp  1931b.cpp  (+37 more)
prj.lab/: CMakeLists.txt
prj.lab/bitset/: bitset.cpp  bitset.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: queuearr.cpp  queuearr.hpp
prj.lab/queuelst/: queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: queuelstpr.cpp  queuelstpr.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.lab/stackarr/: stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.test/: CMakeLists.txt  test_complex.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_rational.cpp  test_stackarr.cpp  test_stackarrt.cpp  test_stacklst.cpp
