add_executable(1931a 1931a.cpp)
add_executable(1931b 1931b.cpp)
add_executable(1931c 1931c.cpp)
add_executable(1931d 1931d.cpp)
add_executable(1929b 1929b.cpp)
add_executable(1928a 1928a.cpp)
add_executable(1873b 1873b.cpp)
add_executable(1921b 1921b.cpp)
add_executable(1921c 1921c.cpp)
add_executable(1921a 1921a.cpp)
add_executable(1920a 1920a.cpp)
add_executable(1922a 1922a.cpp)
add_executable(1945b 1945b.cpp)
add_executable(71a 71a.cpp)
add_executable(236a 236a.cpp)