add_executable(1931a 1931a.cpp)
add_executable(1931b 1931b.cpp)
add_executable(1931c 1931c.cpp)
add_executable(1931d 1931d.cpp)
add_executable(1929b 1929b.cpp)
add_executable(1928a 1928a.cpp)
add_executable(1873b 1873b.cpp)
add_executable(1921b 1921b.cpp)
add_executable(1921c 1921c.cpp)
add_executable(1921a 1921a.cpp)
add_executable(1920a 1920a.cpp)
add_executable(1922a 1922a.cpp)
add_executable(1945b 1945b.cpp)
add_executable(71a 71a.cpp)
add_executable(236a 236a.cpp)
add_executable(1955a 1955a.cpp)
add_executable(1954a 1954a.cpp)
add_executable(1954c 1954c.cpp)
add_executable(1955c 1955c.cpp)
add_executable(1955b 1955b.cpp)
add_executable(1950c 1950c.cpp)
add_executable(1950b 1950b.cpp)
add_executable(1950a 1950a.cpp)
add_executable(1956a 1956a.cpp)
add_executable(1956b 1956b.cpp)
add_executable(1946a 1946a.cpp)