add_executable(1931a 1931a.cpp)
add_executable(1931b 1931b.cpp)
add_executable(1931c 1931c.cpp)
add_executable(1931d 1931d.cpp)
add_executable(1929b 1929b.cpp)
add_executable(1928a 1928a.cpp)
add_executable(1873b 1873b.cpp)
add_executable(1921b 1921b.cpp)
add_executable(1921c 1921c.cpp)
add_executable(1921a 1921a.cpp)
add_executable(1920a 1920a.cpp)
add_executable(1922a 1922a.cpp)
add_executable(1945b 1945b.cpp)
add_executable(71a 71a.cpp)
add_executable(236a 236a.cpp)
add_executable(1955a 1955a.cpp)
add_executable(1954a 1954a.cpp)
add_executable(1954c 1954c.cpp)
add_executable(1955c 1955c.cpp)
add_executable(1955b 1955b.cpp)
add_executable(1950c 1950c.cpp)
add_executable(1950b 1950b.cpp)
add_executable(1950a 1950a.cpp)
add_executable(1956a 1956a.cpp)
add_executable(1956b 1956b.cpp)
add_executable(1946a 1946a.cpp)
add_executable(1971b 1971b.cpp)
add_executable(1971c 1971c.cpp)
add_executable(1970a1 1970a1.cpp)
add_executable(1972a 1972a.cpp)
add_executable(1968b 1968b.cpp)
add_executable(1973a 1973a.cpp)
add_executable(1972b 1972b.cpp)
add_executable(1969a 1969a.cpp)
add_executable(1969b 1969b.cpp)
add_executable(1971a 1971a.cpp)
add_executable(1957a 1957a.cpp)
add_executable(1945a 1945a.cpp)
add_executable(1944a 1944a.cpp)
add_executable(1942a 1942a.cpp)
add_executable(1942b 1942b.cpp)
add_executable(1941c 1941c.cpp)
add_executable(1941a 1941a.cpp)
add_executable(1937a 1937a.cpp)
add_executable(1935a 1935a.cpp)
add_executable(1934a 1934a.cpp)
add_executable(1927c 1927c.cpp)
add_executable(1926b 1926b.cpp)